@@ -1,51 +1,42 @@
 package hospital.presentation.prescripcion;
 
 import hospital.logic.Paciente;
-import hospital.logic.Service;
 import hospital.presentation.pacientes.TableModel;
 
 import javax.swing.*;
 import java.awt.event.*;
-import java.beans.PropertyChangeEvent;
-import java.beans.PropertyChangeListener;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
-public class BuscarPaciente extends JDialog implements PropertyChangeListener {
+public class BuscarPaciente extends JDialog {
     private JPanel contentPane;
     private JButton buttonOK;
     private JButton buttonCancel;
     private JTextField textField1;
-    private JComboBox comboBox1;
+    private JComboBox<String> comboBox1;
     private JTable pacientesTable;
-    Controller controllerPrescripcion;
     Model model;
 
     public BuscarPaciente(JFrame parent, Model model) {
         super(parent, "Buscar Paciente", true);
+        this.model = model;
+
         setContentPane(contentPane);
         setSize(500, 300);
         setLocationRelativeTo(parent);
-        parent.setVisible(true);
-        parent.setLocationRelativeTo(null);
+
+        try {
+            int[] cols = {TableModel.ID, TableModel.NOMBRE, TableModel.FECHA_NACIMIENTO, TableModel.TELEFONO};
+            pacientesTable.setModel(new TableModel(cols, Service.instance().findAllPacientes()));
+        } catch (Exception e) {
+            System.err.println("Error al cargar pacientes en el diálogo: " + e.getMessage());
+            pacientesTable.setModel(new TableModel(new int[]{}, Collections.emptyList()));
+        }
 
 
-        this.model = model;
-
-        int[] cols = {TableModel.ID, TableModel.NOMBRE, TableModel.FECHA_NACIMIENTO, TableModel.TELEFONO};
-        pacientesTable.setModel(new TableModel(cols, Service.instance().findAllPacientes()));
-
-        buttonOK.addActionListener(new ActionListener() {
-            public void actionPerformed(ActionEvent e) {
-                onOK();
-            }
-        });
-
-        buttonCancel.addActionListener(new ActionListener() {
-            public void actionPerformed(ActionEvent e) {
-                onCancel();
-            }
-        });
+        buttonOK.addActionListener(e -> onOK());
+        buttonCancel.addActionListener(e -> onCancel());
 
         setDefaultCloseOperation(DO_NOTHING_ON_CLOSE);
         addWindowListener(new WindowAdapter() {
@@ -58,11 +49,7 @@ public class BuscarPaciente extends JDialog implements PropertyChangeListener {
             @Override
             public void mouseClicked(MouseEvent e) {
                 if (e.getClickCount() == 2 && pacientesTable.getSelectedRow() != -1) {
-                    Paciente seleccionado = ((TableModel) pacientesTable.getModel()).getRowAt(pacientesTable.getSelectedRow());
-                    model.setCurrentPaciente(seleccionado);
-                    model.getCurrentReceta().setPaciente(seleccionado);
-                    model.setCurrentReceta(model.getCurrentReceta());
-                    dispose();
+                    onOK();
                 }
             }
         });
@@ -81,26 +68,30 @@ public class BuscarPaciente extends JDialog implements PropertyChangeListener {
         String tipoBusqueda = (String) comboBox1.getSelectedItem();
         List<Paciente> result;
 
-        if (criterio.isEmpty()) {
-            result = Service.instance().findAllPacientes();
-        } else {
-            Paciente filtro = new Paciente();
-            if ("Nombre".equals(tipoBusqueda)) {
-                filtro.setNombre(criterio);
-                result = Service.instance().findAllPacientes().stream()
-                        .filter(p -> p.getNombre().toLowerCase().contains(criterio.toLowerCase()))
-                        .toList();
-            } else { // "Codigo"
-                try {
+        try {
+            if (criterio.isEmpty()) {
+                result = Service.instance().findAllPacientes();
+            } else {
+                if ("Nombre".equals(tipoBusqueda)) {
+                    result = Service.instance().findAllPacientes().stream()
+                            .filter(p -> p.getNombre().toLowerCase().contains(criterio.toLowerCase()))
+                            .collect(Collectors.toList());
+                } else {
+                    Paciente filtro = new Paciente();
                     filtro.setId(criterio);
-                    result = Collections.singletonList(Service.instance().readPaciente(filtro));
-                } catch (Exception e) {
-                    result = Collections.emptyList();
+                    try {
+                        result = Collections.singletonList(Service.instance().readPaciente(filtro));
+                    } catch (Exception e) {
+                        result = Collections.emptyList();
+                    }
                 }
             }
+            int[] cols = {TableModel.ID, TableModel.NOMBRE, TableModel.FECHA_NACIMIENTO, TableModel.TELEFONO};
+            pacientesTable.setModel(new TableModel(cols, result));
+        } catch (Exception e) {
+            System.err.println("Error buscando pacientes: " + e.getMessage());
+            pacientesTable.setModel(new TableModel(new int[]{}, Collections.emptyList()));
         }
-        int[] cols = {TableModel.ID, TableModel.NOMBRE, TableModel.FECHA_NACIMIENTO, TableModel.TELEFONO};
-        pacientesTable.setModel(new TableModel(cols, result));
     }
 
     private void onOK() {
@@ -108,6 +99,7 @@ public class BuscarPaciente extends JDialog implements PropertyChangeListener {
         if (row != -1) {
             Paciente seleccionado = ((TableModel) pacientesTable.getModel()).getRowAt(row);
             model.setCurrentPaciente(seleccionado);
+            model.getCurrentReceta().setPaciente(seleccionado);
             model.setCurrentReceta(model.getCurrentReceta());
         }
         dispose();
@@ -115,18 +107,5 @@ public class BuscarPaciente extends JDialog implements PropertyChangeListener {
 
     private void onCancel() {
         dispose();
-    }
-
-    @Override
-    public void propertyChange(PropertyChangeEvent evt) {
-        switch (evt.getPropertyName()) {
-            case Model.LIST:
-                int[] cols = {TableModel.ID, TableModel.NOMBRE, TableModel.FECHA_NACIMIENTO, TableModel.TELEFONO};
-                pacientesTable.setModel(new TableModel(cols, Service.instance().findAllPacientes()));
-                break;
-            case Model.CURRENT_PACIENTE:
-               model.getCurrentReceta().setPaciente(model.getCurrentPaciente());
-
-        }
     }
 }
